panda_parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | vdecl SEMI decls
   4        | fdecl decls

   5  vdecl_list :
   6             | vdecl SEMI vdecl_list

   7  vdecl : VAR ID COLON typ

   8  typ : INT
   9      | BOOL
  10      | FLOAT
  11      | STRING
  12      | VOID

  13  fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  14  formals_opt :
  15              | formals_list

  16  formals_list : formal_vdecl
  17               | formal_vdecl COMMA formals_list

  18  formal_vdecl : ID COLON typ

  19  stmt_list :
  20            | stmt stmt_list

  21  stmt : expr SEMI
  22       | LBRACE stmt_list RBRACE
  23       | IF LPAREN expr RPAREN stmt ELSE stmt
  24       | WHILE LPAREN expr RPAREN stmt
  25       | RETURN expr SEMI

  26  expr : LITERAL
  27       | BLIT
  28       | FLIT
  29       | SLIT
  30       | ID
  31       | expr PLUS expr
  32       | expr MINUS expr
  33       | expr EQ expr
  34       | expr NEQ expr
  35       | expr LT expr
  36       | expr AND expr
  37       | expr OR expr
  38       | NOT expr
  39       | ID ASSIGN expr
  40       | LPAREN expr RPAREN
  41       | ID LPAREN args_opt RPAREN

  42  args_opt :
  43           | args

  44  args : expr
  45       | expr COMMA args

  46  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (46)
	decls : .  (2)

	VAR  shift 3
	EOF  reduce 2

	program  goto 4
	decls  goto 5
	vdecl  goto 6
	fdecl  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	vdecl : VAR . ID COLON typ  (7)

	ID  shift 8
	.  error


state 4
	%entry% : '\001' program .  (46)

	.  reduce 46


state 5
	program : decls . EOF  (1)

	EOF  shift 9
	.  error


state 6
	decls : vdecl . SEMI decls  (3)
	fdecl : vdecl . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (13)

	SEMI  shift 10
	LPAREN  shift 11
	.  error


state 7
	decls : fdecl . decls  (4)
	decls : .  (2)

	VAR  shift 3
	EOF  reduce 2

	decls  goto 12
	vdecl  goto 6
	fdecl  goto 7


state 8
	vdecl : VAR ID . COLON typ  (7)

	COLON  shift 13
	.  error


state 9
	program : decls EOF .  (1)

	.  reduce 1


state 10
	decls : vdecl SEMI . decls  (3)
	decls : .  (2)

	VAR  shift 3
	EOF  reduce 2

	decls  goto 14
	vdecl  goto 6
	fdecl  goto 7


state 11
	fdecl : vdecl LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (13)
	formals_opt : .  (14)

	ID  shift 15
	RPAREN  reduce 14

	formals_opt  goto 16
	formals_list  goto 17
	formal_vdecl  goto 18


state 12
	decls : fdecl decls .  (4)

	.  reduce 4


state 13
	vdecl : VAR ID COLON . typ  (7)

	INT  shift 19
	BOOL  shift 20
	STRING  shift 21
	FLOAT  shift 22
	VOID  shift 23
	.  error

	typ  goto 24


state 14
	decls : vdecl SEMI decls .  (3)

	.  reduce 3


state 15
	formal_vdecl : ID . COLON typ  (18)

	COLON  shift 25
	.  error


state 16
	fdecl : vdecl LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (13)

	RPAREN  shift 26
	.  error


state 17
	formals_opt : formals_list .  (15)

	.  reduce 15


state 18
	formals_list : formal_vdecl .  (16)
	formals_list : formal_vdecl . COMMA formals_list  (17)

	COMMA  shift 27
	RPAREN  reduce 16


state 19
	typ : INT .  (8)

	.  reduce 8


state 20
	typ : BOOL .  (9)

	.  reduce 9


state 21
	typ : STRING .  (11)

	.  reduce 11


state 22
	typ : FLOAT .  (10)

	.  reduce 10


state 23
	typ : VOID .  (12)

	.  reduce 12


state 24
	vdecl : VAR ID COLON typ .  (7)

	.  reduce 7


state 25
	formal_vdecl : ID COLON . typ  (18)

	INT  shift 19
	BOOL  shift 20
	STRING  shift 21
	FLOAT  shift 22
	VOID  shift 23
	.  error

	typ  goto 28


state 26
	fdecl : vdecl LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (13)

	LBRACE  shift 29
	.  error


state 27
	formals_list : formal_vdecl COMMA . formals_list  (17)

	ID  shift 15
	.  error

	formals_list  goto 30
	formal_vdecl  goto 18


state 28
	formal_vdecl : ID COLON typ .  (18)

	.  reduce 18


state 29
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (13)
	vdecl_list : .  (5)

	VAR  shift 3
	LPAREN  reduce 5
	LBRACE  reduce 5
	RBRACE  reduce 5
	NOT  reduce 5
	IF  reduce 5
	WHILE  reduce 5
	RETURN  reduce 5
	LITERAL  reduce 5
	BLIT  reduce 5
	FLIT  reduce 5
	SLIT  reduce 5
	ID  reduce 5

	vdecl  goto 31
	vdecl_list  goto 32


state 30
	formals_list : formal_vdecl COMMA formals_list .  (17)

	.  reduce 17


state 31
	vdecl_list : vdecl . SEMI vdecl_list  (6)

	SEMI  shift 33
	.  error


state 32
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (13)
	stmt_list : .  (19)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	RBRACE  reduce 19

	stmt_list  goto 45
	stmt  goto 46
	expr  goto 47


state 33
	vdecl_list : vdecl SEMI . vdecl_list  (6)
	vdecl_list : .  (5)

	VAR  shift 3
	LPAREN  reduce 5
	LBRACE  reduce 5
	RBRACE  reduce 5
	NOT  reduce 5
	IF  reduce 5
	WHILE  reduce 5
	RETURN  reduce 5
	LITERAL  reduce 5
	BLIT  reduce 5
	FLIT  reduce 5
	SLIT  reduce 5
	ID  reduce 5

	vdecl  goto 31
	vdecl_list  goto 48


state 34
	expr : LPAREN . expr RPAREN  (40)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 49


state 35
	stmt : LBRACE . stmt_list RBRACE  (22)
	stmt_list : .  (19)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	RBRACE  reduce 19

	stmt_list  goto 50
	stmt  goto 46
	expr  goto 47


state 36
	expr : NOT . expr  (38)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 51


state 37
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (23)

	LPAREN  shift 52
	.  error


state 38
	stmt : WHILE . LPAREN expr RPAREN stmt  (24)

	LPAREN  shift 53
	.  error


state 39
	stmt : RETURN . expr SEMI  (25)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 54


state 40
	expr : LITERAL .  (26)

	.  reduce 26


state 41
	expr : BLIT .  (27)

	.  reduce 27


state 42
	expr : FLIT .  (28)

	.  reduce 28


state 43
	expr : SLIT .  (29)

	.  reduce 29


state 44
	expr : ID .  (30)
	expr : ID . ASSIGN expr  (39)
	expr : ID . LPAREN args_opt RPAREN  (41)

	LPAREN  shift 55
	ASSIGN  shift 56
	SEMI  reduce 30
	RPAREN  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	EQ  reduce 30
	NEQ  reduce 30
	LT  reduce 30
	AND  reduce 30
	OR  reduce 30
	COMMA  reduce 30


state 45
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (13)

	RBRACE  shift 57
	.  error


state 46
	stmt_list : stmt . stmt_list  (20)
	stmt_list : .  (19)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	RBRACE  reduce 19

	stmt_list  goto 58
	stmt  goto 46
	expr  goto 47


state 47
	stmt : expr . SEMI  (21)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	SEMI  shift 59
	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	.  error


state 48
	vdecl_list : vdecl SEMI vdecl_list .  (6)

	.  reduce 6


state 49
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : LPAREN expr . RPAREN  (40)

	RPAREN  shift 67
	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	.  error


state 50
	stmt : LBRACE stmt_list . RBRACE  (22)

	RBRACE  shift 68
	.  error


51: shift/reduce conflict (shift 60, reduce 38) on PLUS
51: shift/reduce conflict (shift 61, reduce 38) on MINUS
51: shift/reduce conflict (shift 62, reduce 38) on EQ
51: shift/reduce conflict (shift 63, reduce 38) on NEQ
51: shift/reduce conflict (shift 64, reduce 38) on LT
51: shift/reduce conflict (shift 65, reduce 38) on AND
51: shift/reduce conflict (shift 66, reduce 38) on OR
state 51
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : NOT expr .  (38)

	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38


state 52
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (23)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 69


state 53
	stmt : WHILE LPAREN . expr RPAREN stmt  (24)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 70


state 54
	stmt : RETURN expr . SEMI  (25)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	SEMI  shift 71
	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	.  error


state 55
	expr : ID LPAREN . args_opt RPAREN  (41)
	args_opt : .  (42)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	RPAREN  reduce 42

	expr  goto 72
	args_opt  goto 73
	args  goto 74


state 56
	expr : ID ASSIGN . expr  (39)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 75


state 57
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (13)

	.  reduce 13


state 58
	stmt_list : stmt stmt_list .  (20)

	.  reduce 20


state 59
	stmt : expr SEMI .  (21)

	.  reduce 21


state 60
	expr : expr PLUS . expr  (31)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 76


state 61
	expr : expr MINUS . expr  (32)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 77


state 62
	expr : expr EQ . expr  (33)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 78


state 63
	expr : expr NEQ . expr  (34)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 79


state 64
	expr : expr LT . expr  (35)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 80


state 65
	expr : expr AND . expr  (36)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 81


state 66
	expr : expr OR . expr  (37)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 82


state 67
	expr : LPAREN expr RPAREN .  (40)

	.  reduce 40


state 68
	stmt : LBRACE stmt_list RBRACE .  (22)

	.  reduce 22


state 69
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (23)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	RPAREN  shift 83
	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	.  error


state 70
	stmt : WHILE LPAREN expr . RPAREN stmt  (24)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	RPAREN  shift 84
	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	.  error


state 71
	stmt : RETURN expr SEMI .  (25)

	.  reduce 25


state 72
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	args : expr .  (44)
	args : expr . COMMA args  (45)

	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	COMMA  shift 85
	RPAREN  reduce 44


state 73
	expr : ID LPAREN args_opt . RPAREN  (41)

	RPAREN  shift 86
	.  error


state 74
	args_opt : args .  (43)

	.  reduce 43


state 75
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : ID ASSIGN expr .  (39)

	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	OR  shift 66
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39


state 76
	expr : expr . PLUS expr  (31)
	expr : expr PLUS expr .  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 31


state 77
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr MINUS expr .  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	.  reduce 32


state 78
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr EQ expr .  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 60
	MINUS  shift 61
	LT  shift 64
	SEMI  reduce 33
	RPAREN  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	AND  reduce 33
	OR  reduce 33
	COMMA  reduce 33


state 79
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr NEQ expr .  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 60
	MINUS  shift 61
	LT  shift 64
	SEMI  reduce 34
	RPAREN  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	AND  reduce 34
	OR  reduce 34
	COMMA  reduce 34


state 80
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr LT expr .  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 60
	MINUS  shift 61
	SEMI  reduce 35
	RPAREN  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	AND  reduce 35
	OR  reduce 35
	COMMA  reduce 35


state 81
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr AND expr .  (36)
	expr : expr . OR expr  (37)

	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	SEMI  reduce 36
	RPAREN  reduce 36
	AND  reduce 36
	OR  reduce 36
	COMMA  reduce 36


state 82
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . EQ expr  (33)
	expr : expr . NEQ expr  (34)
	expr : expr . LT expr  (35)
	expr : expr . AND expr  (36)
	expr : expr . OR expr  (37)
	expr : expr OR expr .  (37)

	PLUS  shift 60
	MINUS  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	AND  shift 65
	SEMI  reduce 37
	RPAREN  reduce 37
	OR  reduce 37
	COMMA  reduce 37


state 83
	stmt : IF LPAREN expr RPAREN . stmt ELSE stmt  (23)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	stmt  goto 87
	expr  goto 47


state 84
	stmt : WHILE LPAREN expr RPAREN . stmt  (24)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	stmt  goto 88
	expr  goto 47


state 85
	args : expr COMMA . args  (45)

	LPAREN  shift 34
	NOT  shift 36
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	expr  goto 72
	args  goto 89


state 86
	expr : ID LPAREN args_opt RPAREN .  (41)

	.  reduce 41


state 87
	stmt : IF LPAREN expr RPAREN stmt . ELSE stmt  (23)

	ELSE  shift 90
	.  error


state 88
	stmt : WHILE LPAREN expr RPAREN stmt .  (24)

	.  reduce 24


state 89
	args : expr COMMA args .  (45)

	.  reduce 45


state 90
	stmt : IF LPAREN expr RPAREN stmt ELSE . stmt  (23)

	LPAREN  shift 34
	LBRACE  shift 35
	NOT  shift 36
	IF  shift 37
	WHILE  shift 38
	RETURN  shift 39
	LITERAL  shift 40
	BLIT  shift 41
	FLIT  shift 42
	SLIT  shift 43
	ID  shift 44
	.  error

	stmt  goto 91
	expr  goto 47


state 91
	stmt : IF LPAREN expr RPAREN stmt ELSE stmt .  (23)

	.  reduce 23


State 51 contains 7 shift/reduce conflicts.


41 terminals, 16 nonterminals
47 grammar rules, 92 states
